--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ h1 {
     margin: 10px;
     text-align: center;
     margin: 14px;
-    min-width: 28%;
-    float: left;
+    min-width: 340px;
+    float:inline-start;
+    margin-left: 30px;
 }
 div {
     margin: 6px;
@@ -89,7 +90,7 @@ img {
 .navcontent {
     float: right;
   }
-  
+@media screen and (min-width: 500px) {
 .navcontent a {
     margin-top: 12px;
     font-size: 20px;
@@ -101,15 +102,34 @@ img {
     text-decoration: none;
     transition: color 0.2s ease-in;
   }
-.navcontent a:hover {
-    color:#bab102;
-    transition: color 0.2s ease-in;
-  }
-.logocsg {
+  .logocsg {
     margin-left: 5%;
     max-height: 70px;
     width: auto;
 }
+}
+@media screen and (max-width: 500px) {
+    .navcontent a {
+        margin-top: 12px;
+        font-size: 15px;
+        font-weight: bold;
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        transition: color 0.2s ease-in;
+      }
+      .logocsg {
+        margin-left: 5%;
+        max-height: 50px;
+        width: auto;
+    }
+}
+.navcontent a:hover {
+    color:#bab102;
+    transition: color 0.2s ease-in;
+  }
 p {
     font-size: 15px;
 }
