--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 @media screen and (max-width: 500px) {
     .container {
-        margin-left: 2%;
+        margin-left: 0;
         margin-right: 5%;
         width: 90%;
         text-align: center;
