--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
         margin: 8px;
         min-width: 340px;
         float:inline-start;
-        margin-left: 15px;
+        margin-left: 5%;
     }
 }
 h1 {
