--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: white;
 }
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 600px) {
     .container {
         margin-left: 8%;
         margin-right: 5%;
@@ -23,7 +23,7 @@ body {
         margin-left: 30px;
     }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
     .container {
         margin-left: 8%;
         margin-right: 5%;
@@ -42,7 +42,10 @@ body {
         margin: 8px;
         min-width: 340px;
         float:inline-start;
-        margin-left: 5%;
+        margin-left: 14%;
+    }
+    h1 {
+        font-size: 25px;
     }
 }
 h1 {
