--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: white;
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 500px) {
     .container {
         margin-left: 8%;
         margin-right: 5%;
@@ -23,10 +23,8 @@ body {
         margin-left: 30px;
     }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     .container {
-        margin-left: 8%;
-        margin-right: 5%;
         width: 90%;
         text-align: center;
         align-items: center;
@@ -37,15 +35,16 @@ body {
         border-radius: 4px;
         width: 340px;
         height: auto;
-        margin: 10px;
-        text-align: center;
-        margin: 8px;
+        margin-right: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 0;
+        text-align: center;    
         min-width: 340px;
         float:inline-start;
-        margin-left: 14%;
     }
     h1 {
-        font-size: 25px;
+        font-size: 18px;
     }
 }
 h1 {
