--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 @media screen and (max-width: 500px) {
     .container {
         width: 90%;
+        margin-left: 5%;
         text-align: center;
         align-items: center;
     }
