--- a/style.css
+++ b/style.css
@@ -90,11 +90,14 @@ p {
     color: black;
     margin-bottom: 6px;
     display: block;
-    box-shadow: 1.5px 1.5px black;
+    box-shadow: 1.7px 1.7px black;
 }
 .button:hover {
     background-color: #fcfacf;
-    transition: background-color 0.2s ease-in;
+    transition: background-color 0.15s ease-in;
+}
+.button:active {
+    box-shadow: 0px 0px;
 }
 .vote {
     text-decoration: none;
@@ -157,6 +160,8 @@ img {
 .navcontent a:hover {
     color:#bab102;
     transition: color 0.2s ease-in;
+    border-bottom: 2.5px solid #bab102;
+    transition: border 0.18s ease-in-out, color 0.18s ease-in-out;
 }
 p {
     font-size: 15px;
