--- a/style.css
+++ b/style.css
@@ -219,11 +219,12 @@ p {
     height: 90px;
 }
 .footer_title {
+    font-family: 'Times New Roman', Times, serif;
     margin-top: 13px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     display: block;
     width: 100%;
-    font-size: 25px;
+    font-size: 28px;
     font-weight: bold;
 }
 .footer_logo {
