--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
         float:inline-start;
     }
     h1 {
-        font-size: 18px;
+        font-size: 20px;
     }
     img {
         max-width: 332px;
@@ -128,6 +128,7 @@ p {
     text-decoration: none;
     margin-left: 35%;
     margin-right: 30%;
+    margin-top: 3%;
     font-size: 12px;
     font-weight: bold;
     width: 30%;
@@ -237,4 +238,24 @@ p {
 .footer_logo:hover {
     scale: 1.2;
     transition: scale 0.3s ease-in-out;
+}
+#more {
+    display: none;
+}
+#myBtn {
+    font-style: italic;
+    transition: color 0.1s ease-in-out;
+}
+#myBtn:hover {
+    color: #bab102;
+    transition: color 0.1s ease-in-out;
+}
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
