--- a/style.css
+++ b/style.css
@@ -47,17 +47,16 @@ body {
         border-radius: 4px;
         width: 340px;
         height: auto;
-        margin: 10px;
         text-align: center;
         margin: 14px;
         min-width: 340px;
         float:inline-start;
         margin-left: 30px;
-        transition: scale 0.15s ease-in-out;
+        transition: scale 0.13s ease-in-out;
     }
     .block:hover {
-        scale: 1.02;
-        transition: scale 0.15s ease-in-out;
+        scale: 1.122;
+        transition: scale 0.13s ease-in-out;
     }
     img {
         max-width: 332px;
@@ -106,7 +105,7 @@ div {
 }
 p {
     font-size: 14px;
-    margin: 6px;
+    margin: 7px;
 }
 .title {
     font-size: 18px;
@@ -239,23 +238,6 @@ p {
     scale: 1.2;
     transition: scale 0.3s ease-in-out;
 }
-#more {
-    display: none;
-}
-#myBtn {
-    font-style: italic;
-    transition: color 0.1s ease-in-out;
-}
-#myBtn:hover {
-    color: #bab102;
-    transition: color 0.1s ease-in-out;
-}
-button, input[type="submit"], input[type="reset"] {
-	background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+.description {
+    font-size: 11.5px;
 }
