--- a/style.css
+++ b/style.css
@@ -241,3 +241,64 @@ p {
 .description {
     font-size: 11.5px;
 }
+
+/*
+ * Keyframes
+ */
+ @keyframes fadeInTest {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+ }  
+ @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translate3d(0, 100%, 0);
+    }
+  
+    100% {
+      opacity: 1;
+      transform: none;
+    }
+  }
+  
+  @keyframes fadeInRight {
+    0% {
+      opacity: 0;
+      transform: translate3d(100%, 0, 0);
+    }
+  
+    100% {
+      opacity: 1;
+      transform: none;
+    }
+  }
+
+  .fadein {
+    animation-name: fadeIn;
+    animation-duration: 2s;
+  }
+
+  .fadeInUp {
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+}
+
+.fadeInRight {
+    animation-name: fadeInRight;
+    animation-duration: 2s;
+}
